meteor/client/styles/_itemTypeColors.scss
/* ... */
@mixin item-type-before-background {
	&.camera::before {
		background: var(--segment-layer-background-camera);
	}

	&.graphics::before {
		background: var(--segment-layer-background-graphics);
	}

	&.lower-third::before {
		background: var(--segment-layer-background-lower-third);
	}

	&.live-speak::before {
		background: var(--segment-layer-background-live-speak);
	}

	&.vt::before {
		background: var(--segment-layer-background-vt);
	}

	&.remote::before {
		background: var(--segment-layer-background-remote);
	}

	&.script::before {
		background: var(--segment-layer-background-script);
	}

	&.mic::before {
		background: var(--segment-layer-background-mic);
	}

	&.unknown::before {
		background: var(--segment-layer-background-unknown);
	}
}

@mixin item-type-colors-svg {
	&.camera {
		fill: var(--segment-layer-background-camera);

		&.second {
			fill: var(--segment-layer-background-camera--second);
		}
	}

	&.graphics {
		fill: var(--segment-layer-background-graphics);

		&.second {
			fill: var(--segment-layer-background-graphics--second);
		}
	}

	&.lower-third {
		fill: var(--segment-layer-background-lower-third);
	}

	&.live-speak {
		fill: var(--segment-layer-background-live-speak);
	}

	&.vt {
		fill: var(--segment-layer-background-vt);

		&.second {
			fill: var(--segment-layer-background-vt--second);
		}
	}

	&.remote {
		fill: var(--segment-layer-background-remote);

		&.second {
			fill: var(--segment-layer-background-remote--second);
		}
	}

	&.local {
		fill: var(--segment-layer-background-local);

		&.second {
			fill: var(--segment-layer-background-local--second);
		}
	}

	&.script {
		fill: var(--segment-layer-background-script);
	}

	&.mic {
		fill: var(--segment-layer-background-mic);
	}

	&.unknown {
		fill: var(--segment-layer-background-unknown);
	}
}

@mixin invalid-overlay {
	&.invalid {
		opacity: 0.5;
		background-color: #333;
		background-image: repeating-linear-gradient(
				45deg,
				rgba(0, 0, 0, 0) 0%,
				rgba(0, 0, 0, 0) 5px,
				rgba(0, 0, 0, 1) 5px,
				rgba(0, 0, 0, 1) 10px
			),
			repeating-linear-gradient(
				-45deg,
				rgba(0, 0, 0, 0) 0%,
				rgba(0, 0, 0, 0) 5px,
				rgba(0, 0, 0, 1) 5px,
				rgba(0, 0, 0, 1) 10px
			);
	}
}

@mixin floated-overlay {
	$part-start-color: #a5a5a5;

	&.floated {
		background-image: repeating-linear-gradient(
			-45deg,
			transparent 0%,
			transparent 8px,
			darken($part-start-color, 50%) 8px,
			darken($part-start-color, 50%) 10px
		);
		backdrop-filter: saturate(0%) brightness(50%);
	}
}

@mixin missing-overlay {
	&.source-broken,
	&.source-missing {
		&::after {
			content: ' ';
			display: block;
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			z-index: 1;
			mix-blend-mode: normal;
			background-image: repeating-linear-gradient(
				45deg,
				transparent,
				transparent 10px,
				black 11px,
				black 15px,
				transparent 16px
			);
			opacity: 0.4;
		}
	}

	&.source-broken {
		&::after {
			background-image: repeating-linear-gradient(
				-45deg,
				transparent,
				transparent 2px,
				rgba(0, 0, 0, 0.54) 3px,
				rgba(0, 0, 0, 0.54) 4px,
				transparent 5px
			);
		}
	}

	// Don't treat an unknown state as an issue
	/*  {
		background-blend-mode: overlay; 
		background-image: repeating-linear-gradient(
		45deg,
		transparent,
		transparent 10px,
		black 11px,
		black 15px,
		transparent 16px
		);
	} */
}

